changes in menu

--- a/nvd/menu.html
+++ b/nvd/menu.html
@@ -9,29 +9,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <!-- Hi -->
+
 <body>
     <div class="container">
         <div class="row">
+
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-1 mt-1">
+
                 <div class="card h-100 shadow-sm">
                     <img src="https://i.ibb.co/VpL0xHd/saag-roti-new-vijay-dhaba.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Saag Roti</h5>
-                      <p class="card-text">3 Makki Rotis with Sarson da Saag and Raita</p>
+                        <h5 class="card-title">Saag Roti</h5>
+                        <p class="card-text">3 Makki Rotis with Sarson da Saag and Raita</p>
                     </div>
-                  </div>
+                </div>
+
             </div>
+
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-1 mt-1">
                 <div class="card h-100 shadow-sm">
                     <img src="https://doodleipsum.com/700x525/avatar-2?bg=D98D63" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Simple Thali</h5>
-                      <p class="card-text">Dal, Sabzi, Rice, 4 Tawa Butter Roti and Salad</p>
+                        <h5 class="card-title">Simple Thali</h5>
+                        <p class="card-text">Dal, Sabzi, Rice, 4 Tawa Butter Roti and Salad</p>
                     </div>
-                  </div>
+                </div>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-1 mt-1">
-                <img src="https://doodleipsum.com/700x525/avatar-2?bg=96CEB4" alt="" class="img-fluid rounded-3">
+
+                <div class="card h-100 shadow-sm">
+                    <img src="https://doodleipsum.com/700x525/avatar-2?bg=96CEB4" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tawa Roti</h5>
+                        <p class="card-text">Home style tawa roti made with high quelity wheat flour</p>
+                    </div>
+                </div>
+
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-1 mt-1">
                 <img src="https://doodleipsum.com/700x525/avatar-2?bg=FFAD60" alt="" class="img-fluid rounded-3">
